syntax = "proto3";

package com.road.yishi.proto.army;

message ArmyListRspMsg {
  repeated int32 armyList = 1;
}
